# cli-assistant

./: .gitignore  Cargo.toml  README.md  examples.sh  install.sh
.cargo-husky/hooks/: pre-commit
src/: main.rs
