[package]
name = "assistant"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "CLI tool for interacting with Ollama AI models from WSL"

[[bin]]
name = "assistant"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
toml = "0.8"
colored = "2.1"
crossterm = "0.28"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
walkdir = "2.4"

[dev-dependencies]
cargo-husky = { version = "1.5", default-features = false, features = ["user-hooks"] }
